--- a/qr/index.html
+++ b/qr/index.html
@@ -2,34 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=de    <section cla    <section class="about">
-      <h2 class="section-title">What is WRAVEN?</h2>
-      <div class="about-content">
-        <p>WRAVEN (Western Research Advisory for Vulnerabilities, Exploits, &amp; Networks) is Western Michigan University's premier cybersecurity nonprofit and student organization. We teach ethical hacking &amp; defending, run workshops and labs, compete as ECX Inc., publish research, and collaborate with nonprofits and small businesses to strengthen our community's security.</p>
-        <div class="stats-grid">
-          <div class="stat-item">
-            <span class="stat-number">50+</span>
-            <span class="stat-label">Active Members</span>
-          </div>
-          <div class="stat-item">
-            <span class="stat-number">100+</span>
-            <span class="stat-label">CTF Competitions</span>
-          </div>
-          <div class="stat-item">
-            <span class="stat-number">25+</span>
-            <span class="stat-label">Research Papers</span>
-          </div>
-        </div>
-      </div>
-    </section>tips" aria-labelledby="tips-title">
-      <h2 id="tips-title" class="section-title">QR Safety Tips</h2>
-      <div class="tips-grid">
-        <div class="tip"><strong>Check the domain.</strong> Tap-and-hold to preview the full URL. Watch for typos and weird subdomains.</div>
-        <div class="tip"><strong>Look for HTTPS + known brand.</strong> Don't sign in on sites you don't recognize.</div>
-        <div class="tip"><strong>Avoid installing apps from QR codes.</strong> Go to the official app store instead.</div>
-        <div class="tip"><strong>When in doubt, don't submit.</strong> Close the page; find the destination manually.</div>
-      </div>
-    </section>dth, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="author" content="WRAVEN" />
   <title>WRAVEN | You scanned a QR code — Stay sharp</title>
   <meta name="description" content="Quick QR-safety tips from WRAVEN plus how to get involved: join the Discord, sign up on ExperienceWMU, read research, and support our work." />
@@ -134,16 +107,34 @@
     </section>
 
     <section class="tips" aria-labelledby="tips-title">
-      <h2 id="tips-title" style="position:absolute;left:-9999px;">QR safety tips</h2>
-      <div class="tip"><strong>Check the domain.</strong> Tap-and-hold to preview the full URL. Watch for typos and weird subdomains.</div>
-      <div class="tip"><strong>Look for HTTPS + known brand.</strong> Don’t sign in on sites you don’t recognize.</div>
-      <div class="tip"><strong>Avoid installing apps from QR codes.</strong> Go to the official app store instead.</div>
-      <div class="tip"><strong>When in doubt, don’t submit.</strong> Close the page; find the destination manually.</div>
+      <h2 id="tips-title" class="section-title">QR Safety Tips</h2>
+      <div class="tips-grid">
+        <div class="tip"><strong>Check the domain.</strong> Tap-and-hold to preview the full URL. Watch for typos and weird subdomains.</div>
+        <div class="tip"><strong>Look for HTTPS + known brand.</strong> Don't sign in on sites you don't recognize.</div>
+        <div class="tip"><strong>Avoid installing apps from QR codes.</strong> Go to the official app store instead.</div>
+        <div class="tip"><strong>When in doubt, don't submit.</strong> Close the page; find the destination manually.</div>
+      </div>
     </section>
 
     <section class="about">
-      <h2>What is WRAVEN?</h2>
-      <p>WRAVEN (Western Research Advisory for Vulnerabilities, Exploits, &amp; Networks) is Western Michigan University’s premier cybersecurity nonprofit and student organization. We teach ethical hacking &amp; defending, run workshops and labs, compete as ECX Inc., publish research, and collaborate with nonprofits and small businesses to strengthen our community’s security.</p>
+      <h2 class="section-title">What is WRAVEN?</h2>
+      <div class="about-content">
+        <p>WRAVEN (Western Research Advisory for Vulnerabilities, Exploits, &amp; Networks) is Western Michigan University's premier cybersecurity nonprofit and student organization. We teach ethical hacking &amp; defending, run workshops and labs, compete as ECX Inc., publish research, and collaborate with nonprofits and small businesses to strengthen our community's security.</p>
+        <div class="stats-grid">
+          <div class="stat-item">
+            <span class="stat-number">50+</span>
+            <span class="stat-label">Active Members</span>
+          </div>
+          <div class="stat-item">
+            <span class="stat-number">100+</span>
+            <span class="stat-label">CTF Competitions</span>
+          </div>
+          <div class="stat-item">
+            <span class="stat-number">25+</span>
+            <span class="stat-label">Research Papers</span>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section class="programs" aria-labelledby="programs-title">
@@ -200,7 +191,9 @@
           <span class="note">Nonprofits &amp; small orgs welcome</span>
         </a>
       </div>
-    </section>    <p class="footnote">We don’t collect personal data on this page. Questions? contact@wraven.org</p>
+    </section>
+
+    <p class="footnote">We don't collect personal data on this page. Questions? contact@wraven.org</p>
   </main>
 
 </body>
