--- a/index.html
+++ b/index.html
@@ -142,6 +142,75 @@
 
         <!-- Main Grid -->
         <main class="main-grid">
+            <!-- Hero Call to Action -->
+            <section class="grid-item hero-cta">
+                <div class="hero-content">
+                    <div class="hero-text">
+                        <h2 class="hero-title">Western Michigan University's Premier Cybersecurity Organization</h2>
+                        <p class="hero-description">Join WRAVEN for cutting-edge threat research, hacking, CTF competitions, and hands-on cybersecurity training. Be part of the next generation of cyber experts.</p>
+                        <div class="hero-actions">
+                            <a href="https://discord.gg/uYkvSU8DHy" target="_blank" class="hero-btn primary">
+                                <span class="btn-icon">💬</span>
+                                Join Our Discord
+                            </a>
+                            <a href="https://experiencewmu.wmich.edu/organization/wraven" target="_blank" class="hero-btn secondary">
+                                <span class="btn-icon">🎓</span>
+                                Join at WMU
+                            </a>
+                        </div>
+                    </div>
+                    <div class="hero-visual">
+                        <div class="hero-stats">
+                            <div class="stat-card">
+                                <div class="stat-number">36</div>
+                                <div class="stat-label">New Hackers</div>
+                            </div>
+                            <div class="stat-card">
+                                <div class="stat-number">7</div>
+                                <div class="stat-label">Completed Projects</div>
+                            </div>
+                            <div class="stat-card">
+                                <div class="stat-number">∞</div>
+                                <div class="stat-label">CTF Events</div>
+                            </div>
+                        </div>
+                        <div class="hero-terminal">
+                            <div class="terminal-header">
+                                <div class="terminal-dots">
+                                    <span class="dot red"></span>
+                                    <span class="dot yellow"></span>
+                                    <span class="dot green"></span>
+                                </div>
+                                <div class="terminal-title">wraven@kalamazoo:~$</div>
+                            </div>
+                            <div class="terminal-content">
+                                <div class="terminal-line">
+                                    <span class="prompt">$ </span>
+                                    <span class="command">whoami</span>
+                                </div>
+                                <div class="terminal-line">
+                                    <span class="output">WRAVEN - Threat Intelligence & Research</span>
+                                </div>
+                                <div class="terminal-line">
+                                    <span class="prompt">$ </span>
+                                    <span class="command">mission --status</span>
+                                </div>
+                                <div class="terminal-line">
+                                    <span class="output success">✓ Defending digital infrastructure</span>
+                                </div>
+                                <div class="terminal-line">
+                                    <span class="output success">✓ Training next-gen security experts</span>
+                                </div>
+                                <div class="terminal-line">
+                                    <span class="prompt">$ </span>
+                                    <span class="command typing-effect">join_wraven --apply</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
             <!-- Threat Overview -->
             <!-- Accepted Tags & Formatting Guide for Threat Overview
 
