--- a/qr/index.html
+++ b/qr/index.html
@@ -122,15 +122,15 @@
         <p>WRAVEN (Western Research Advisory for Vulnerabilities, Exploits, &amp; Networks) is Western Michigan University's premier cybersecurity nonprofit and student organization. We teach ethical hacking &amp; defending, run workshops and labs, compete as ECX Inc., publish research, and collaborate with nonprofits and small businesses to strengthen our community's security.</p>
         <div class="stats-grid">
           <div class="stat-item">
-            <span class="stat-number">50+</span>
+            <span class="stat-number">35+</span>
             <span class="stat-label">Active Members</span>
           </div>
           <div class="stat-item">
-            <span class="stat-number">100+</span>
+            <span class="stat-number">INFINITE</span>
             <span class="stat-label">CTF Competitions</span>
           </div>
           <div class="stat-item">
-            <span class="stat-number">25+</span>
+            <span class="stat-number">8+</span>
             <span class="stat-label">Research Papers</span>
           </div>
         </div>
