--- a/redirect/index.html
+++ b/redirect/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="refresh" content="0; url=https://experiencewmu.wmich.edu/organization/wraven">
+  <meta http-equiv="refresh" content="0; url=https://wraven.org/qr">
   <title>Redirecting…</title>
 </head>
 <body>
-  <p>If nothing happens, <a href="https://experiencewmu.wmich.edu/organization/wraven">click here</a>.</p>
+  <p>If nothing happens, <a href="https://wraven.org/qr">click here</a>.</p>
 </body>
 </html>
