--- a/index.html
+++ b/index.html
@@ -559,63 +559,60 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <div class="footer-container">
+            <div class="footer-content">
                 <div class="footer-section">
-                    <div class="section-header footer-header">
+                    <div class="section-header">
                         <h2>System Status</h2>
                         <div class="feed-status">
                             <span class="status-dot status-online"></span>
                             Online
                         </div>
                     </div>
-                    <div class="footer-items">
-                        <div class="footer-item">
-                            <div class="footer-item-label">Connection</div>
-                            <div class="footer-item-value">
-                                <span>Connected from </span>
-                                <code id="user-ip" class="status-code">Detecting...</code>
+                    <div class="footer-grid">
+                        <div class="footer-stat">
+                            <div class="footer-stat-label">Connection</div>
+                            <div class="footer-stat-value">
+                                <span>From </span><code id="user-ip">Detecting...</code>
                             </div>
                         </div>
-                        <div class="footer-item">
-                            <div class="footer-item-label">Uptime</div>
-                            <div class="footer-item-value">
-                                <code class="status-code uptime-code">127d 14h 32m</code>
+                        <div class="footer-stat">
+                            <div class="footer-stat-label">Uptime</div>
+                            <div class="footer-stat-value">
+                                <code class="uptime-code">127d 14h 32m</code>
                             </div>
                         </div>
-                        <div class="footer-item">
-                            <div class="footer-item-label">Last Update</div>
-                            <div class="footer-item-value">
-                                <code class="status-code">Jul 7 2025 14:32 EST</code>
+                        <div class="footer-stat">
+                            <div class="footer-stat-label">Last Update</div>
+                            <div class="footer-stat-value">
+                                <code>Aug 20 2025 15:42 EST</code>
                             </div>
                         </div>
                     </div>
                 </div>
                 
                 <div class="footer-section">
-                    <div class="section-header footer-header">
+                    <div class="section-header">
                         <h2>Contact & Legal</h2>
                         <div class="feed-status">
                             <span class="status-dot status-live"></span>
                             Available
                         </div>
                     </div>
-                    <div class="footer-items">
-                        <div class="footer-item">
-                            <div class="footer-item-label">General Contact</div>
-                            <div class="footer-item-value">
+                    <div class="footer-grid">
+                        <div class="footer-stat">
+                            <div class="footer-stat-label">Contact</div>
+                            <div class="footer-stat-value">
                                 <a href="mailto:contact@wraven.org" class="footer-link">contact@wraven.org</a>
                             </div>
                         </div>
-                        <div class="footer-item">
-                            <div class="footer-item-label">Organization Status</div>
-                            <div class="footer-item-value">Registered Nonprofit</div>
+                        <div class="footer-stat">
+                            <div class="footer-stat-label">Status</div>
+                            <div class="footer-stat-value">Registered Nonprofit</div>
                         </div>
-                        <div class="footer-item">
-                            <div class="footer-item-label">Fiscal Sponsor</div>
-                            <div class="footer-item-value">
-                                <a href="https://hackclub.com/hcb" target="_blank" class="footer-link">
-                                    Hack Club, 501(c)(3) (EIN: 81-2908499)
-                                </a>
+                        <div class="footer-stat">
+                            <div class="footer-stat-label">Fiscal Sponsor</div>
+                            <div class="footer-stat-value">
+                                <a href="https://hackclub.com/hcb" target="_blank" class="footer-link">Hack Club 501(c)(3)</a>
                             </div>
                         </div>
                     </div>
