--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
     </script>
 </head>
 <body>
+    <!-- Skip to main content for accessibility -->
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+    
     <!-- Main Interface -->
     <div id="main-interface" class="main-interface">
         <!-- Header -->
@@ -122,14 +125,14 @@
             <div class="header-content">
                 <div class="header-left">
                     <h1 class="logo">
-                        <img src="https://wraven.org/imgs/widelogo.png" alt="WRAVEN - Western Michigan University Cybersecurity Organization Logo" class="logo-image">
+                        <img src="https://wraven.org/imgs/widelogo.png" alt="WRAVEN - Western Michigan University Cybersecurity Organization Logo" class="logo-image" loading="eager" onload="this.style.opacity='1'" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';">
                         <span class="logo-text">WRAVEN</span>
                     </h1>
                     <span class="subtitle">Western Research Advisory for Vulnerabilities, Exploits, & Networks</span>
                 </div>
                 <div class="header-right">
                     <div class="status-indicators">
-                        <div class="status-item">
+                        <div class="status-item" role="status" aria-label="Intel feed status">
                             <span class="status-dot status-live"></span>
                             <span>Intel Feed: Live</span>
                         </div>
@@ -141,7 +144,7 @@
         </header>
 
         <!-- Main Grid -->
-        <main class="main-grid">
+        <main class="main-grid" id="main-content" role="main">
             <!-- Hero Call to Action -->
             <section class="grid-item hero-cta">
                 <div class="hero-content">
@@ -204,6 +207,7 @@
                                 <div class="terminal-line">
                                     <span class="prompt">$ </span>
                                     <span class="command typing-effect">join_wraven --apply</span>
+                                    <span class="cursor">|</span>
                                 </div>
                             </div>
                         </div>
@@ -265,12 +269,12 @@
                 <section class="grid-item threat-overview">
                     <div class="section-header">
                         <h2>Threat Overview</h2>
-                        <div class="feed-status">
+                        <div class="feed-status" role="status" aria-label="Threat feed status">
                             <span class="status-dot status-live"></span>
                             Live updates…
                         </div>
                     </div>
-                    <div class="threat-feed">
+                    <div class="threat-feed" role="feed" aria-label="Live threat intelligence feed">
                         <!-- SonicWall SMA OVERSTEP -->
                         <div class="threat-item">
                             <div class="threat-indicator high"></div>
@@ -530,7 +534,7 @@
                 <div class="bento-box sponsors">
                     <div class="sponsor-list">
                         <div class="sponsor-item">
-                            <img src="/imgs/birdsquare.png" alt="Placeholder" class="sponsor-img">
+                            <img src="/imgs/birdsquare.png" alt="Placeholder" class="sponsor-img" loading="lazy">
                             <span class="sponsor-name">
                                 <span class="sponsor-title">Your Organization?</span>
                                 <span class="sponsor-subtitle">We'd love your support</span>
@@ -538,7 +542,7 @@
                         </div>
 
                         <a class="sponsor-item" href="https://hackclub.com/hcb" target="_blank" rel="noopener">
-                            <img src="/imgs/HCBicon.png" alt="HCB - The Hack Foundation" class="sponsor-img">
+                            <img src="/imgs/HCBicon.png" alt="HCB - The Hack Foundation" class="sponsor-img" loading="lazy">
                             <span class="sponsor-name">
                                 <span class="sponsor-title">HCB (Fiscal Sponsor)</span>
                                 <span class="sponsor-subtitle">The Hack Foundation "Hack Club"</span>
@@ -546,7 +550,7 @@
                         </a>
 
                         <a class="sponsor-item" href="https://wmuwsa.org/allocations" target="_blank" rel="noopener">
-                            <img src="/imgs/WSAACicon.png" alt="WSAAC - Western Student Association Allocations Committee" class="sponsor-img">
+                            <img src="/imgs/WSAACicon.png" alt="WSAAC - Western Student Association Allocations Committee" class="sponsor-img" loading="lazy">
                             <span class="sponsor-name">
                                 <span class="sponsor-title">WSAAC</span>
                                 <span class="sponsor-subtitle">Western Student Association Allocations Committee</span>
@@ -614,6 +618,11 @@
 
     <!-- Background Elements -->
     <div class="background-grid"></div>
+
+    <!-- Back to Top Button -->
+    <button id="back-to-top" class="back-to-top" aria-label="Back to top" title="Back to top">
+        <span>↑</span>
+    </button>
 
     <!-- WRAVEN Info Modal -->
     <div id="wraven-modal" class="modal">
