--- a/index.html
+++ b/index.html
@@ -125,7 +125,10 @@
             <div class="header-content">
                 <div class="header-left">
                     <h1 class="logo">
-                        <img src="https://wraven.org/imgs/widelogo.png" alt="WRAVEN - Western Michigan University Cybersecurity Organization Logo" class="logo-image" loading="eager" onload="this.style.opacity='1'" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';">
+                        <picture>
+                            <source srcset="https://wraven.org/imgs/widelogo.webp" type="image/webp">
+                            <img src="https://wraven.org/imgs/widelogo.png" alt="WRAVEN - Western Michigan University Cybersecurity Organization Logo" class="logo-image" loading="eager" onload="this.style.opacity='1'" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';">
+                        </picture>
                         <span class="logo-text">WRAVEN</span>
                     </h1>
                     <span class="subtitle">Western Research Advisory for Vulnerabilities, Exploits, & Networks</span>
@@ -534,7 +537,10 @@
                 <div class="bento-box sponsors">
                     <div class="sponsor-list">
                         <div class="sponsor-item">
-                            <img src="/imgs/birdsquare.png" alt="Placeholder" class="sponsor-img" loading="lazy">
+                            <picture>
+                                <source srcset="/imgs/birdsquare.webp" type="image/webp">
+                                <img src="/imgs/birdsquare.png" alt="Placeholder" class="sponsor-img" loading="lazy">
+                            </picture>
                             <span class="sponsor-name">
                                 <span class="sponsor-title">Your Organization?</span>
                                 <span class="sponsor-subtitle">We'd love your support</span>
@@ -542,7 +548,10 @@
                         </div>
 
                         <a class="sponsor-item" href="https://hackclub.com/hcb" target="_blank" rel="noopener">
-                            <img src="/imgs/HCBicon.png" alt="HCB - The Hack Foundation" class="sponsor-img" loading="lazy">
+                            <picture>
+                                <source srcset="/imgs/HCBicon.webp" type="image/webp">
+                                <img src="/imgs/HCBicon.png" alt="HCB - The Hack Foundation" class="sponsor-img" loading="lazy">
+                            </picture>
                             <span class="sponsor-name">
                                 <span class="sponsor-title">HCB (Fiscal Sponsor)</span>
                                 <span class="sponsor-subtitle">The Hack Foundation "Hack Club"</span>
@@ -550,7 +559,10 @@
                         </a>
 
                         <a class="sponsor-item" href="https://wmuwsa.org/allocations" target="_blank" rel="noopener">
-                            <img src="/imgs/WSAACicon.png" alt="WSAAC - Western Student Association Allocations Committee" class="sponsor-img" loading="lazy">
+                            <picture>
+                                <source srcset="/imgs/WSAACicon.webp" type="image/webp">
+                                <img src="/imgs/WSAACicon.png" alt="WSAAC - Western Student Association Allocations Committee" class="sponsor-img" loading="lazy">
+                            </picture>
                             <span class="sponsor-name">
                                 <span class="sponsor-title">WSAAC</span>
                                 <span class="sponsor-subtitle">Western Student Association Allocations Committee</span>
