--- a/redirect/index.html
+++ b/redirect/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="3; url=https://wraven.org/qr">
+    <meta http-equiv="refresh" content="3; url=https://wraven.org/">
     <title>Redirecting | WRAVEN</title>
     
     <!-- Favicon -->
@@ -182,7 +182,7 @@
         <h1 class="redirect-title">Redirecting...</h1>
         <p class="redirect-message">You're being redirected to the requested page.</p>
         
-        <a href="https://wraven.org/qr" class="redirect-link">
+        <a href="https://wraven.org/" class="redirect-link">
             <span>Continue Manually</span>
             <span>→</span>
         </a>
