--- a/index.html
+++ b/index.html
@@ -249,11 +249,11 @@
                     <div class="hero-visual">
                         <div class="hero-stats">
                             <div class="stat-card">
-                                <div class="stat-number">44</div>
+                                <div class="stat-number">46</div>
                                 <div class="stat-label">Researchers</div>
                             </div>
                             <div class="stat-card">
-                                <div class="stat-number">8</div>
+                                <div class="stat-number">9</div>
                                 <div class="stat-label">Completed Projects</div>
                             </div>
                             <div class="stat-card">
@@ -371,7 +371,7 @@
                                     <div class="threat-tags">
                                         <span class="tag tag-apt">Salt Typhoon</span>
                                         <span class="tag tag-technique">Router Exploits</span>
-                                        <span class="tag tag-sector">Telecom / Gov</span>
+                                        <span class="tag tag-ioc">Telecom / Gov</span>
                                     </div>
                                     <div class="threat-time">Sep 09</div>
                                 </div>
@@ -380,7 +380,7 @@
 
                         <!-- Microsoft Patch Tuesday vulnerabilities -->
                         <div class="threat-item">
-                            <div class="threat-indicator high"></div>
+                            <div class="threat-indicator low"></div>
                             <div class="threat-content">
                                 <div class="threat-title">Microsoft Patch Tuesday: Two zero-days + critical vulnerabilities</div>
                                 <div class="threat-meta">84 CVEs patched; includes Microsoft Office, SMB, NTFS; elevation of privilege & remote code execution flaws</div>
@@ -388,7 +388,7 @@
                                     <div class="threat-tags">
                                         <span class="tag tag-cve">CVE-2025-55234</span>
                                         <span class="tag tag-technique">RCE / PrivEsc</span>
-                                        <span class="tag tag-sector">Software / Windows</span>
+                                        <span class="tag tag-phishing">Software / Windows</span>
                                     </div>
                                     <div class="threat-time">Sep 09</div>
                                 </div>
@@ -397,7 +397,7 @@
 
                         <!-- Sophos AP6 vulnerability -->
                         <div class="threat-item">
-                            <div class="threat-indicator high"></div>
+                            <div class="threat-indicator medium"></div>
                             <div class="threat-content">
                                 <div class="threat-title">Critical auth bypass in Sophos AP6 series WAPs</div>
                                 <div class="threat-meta">CVE-2025-10159 allows remote attackers to gain full admin without credentials on certain Sophos wireless access points</div>
@@ -531,14 +531,14 @@
                 </div>
                 <div class="tools-grid">
                     <a href="https://public.wraven.org" target="_blank" class="tool-btn">
-                        <div class="tool-icon">⚡</div>
+                        <div class="tool-icon">🗼</div>
                         <div class="tool-name">WATCHTOWER</div>
                         <div class="tool-desc">Real-time threat monitoring</div>
                     </a>
                     <button class="tool-btn">
-                        <div class="tool-icon">🦠</div>
-                        <div class="tool-name">WARDEN</div>
-                        <div class="tool-desc">Coming soon...</div>
+                        <div class="tool-icon">🛡️</div>
+                        <div class="tool-name">HORIZON</div>
+                        <div class="tool-desc">Under development</div>
                     </button>
                     <button class="tool-btn">
                         <div class="tool-icon">🔍</div>
@@ -618,7 +618,7 @@
                 </div>
                 <div class="bento-box sponsors">
                     <div class="sponsor-list">
-                        <div class="sponsor-item">
+                        <div class="sponsor-item" href="https://eff.org/" target="_blank" rel="noopener">
                             <picture>
                                 <source srcset="/imgs/eff.webp" type="image/webp">
                                 <img src="/imgs/eff.png" alt="Electronic Frontier Foundation" class="sponsor-img" loading="lazy">
@@ -651,7 +651,7 @@
                             </span>
                         </a>
 
-                        <div class="sponsor-item">
+                        <div class="sponsor-item" href="https://bugcrowd.com/" target="_blank" rel="noopener">
                             <picture>
                                 <source srcset="/imgs/bugcrowd.webp" type="image/webp">
                                 <img src="/imgs/bugcrowd.png" alt="Bugcrowd" class="sponsor-img" loading="lazy">
